99-archive/rcon-monitor-ugly-by-me/mmonit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mmonit
  name: mmonit
  namespace: mc20
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mmonit
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mmonit
    spec:
      containers:
      - image: phonkd/mmonit
        name: mmonit
        ports:
        - containerPort: 25575
          name: rcon
        - containerPort: 8080
          name: web
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mmonit
  name: mmonit
  namespace: mc20
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mmonit
  type: NodePort
